ui Fix text alignement
(regression introduced with previous update)

--- a/style/index.scss
+++ b/style/index.scss
@@ -129,6 +129,10 @@ a
   }
 }
 
+p {
+  vertical-align: baseline;
+}
+
 /* Form elements */
 
 
